@startuml classianalisi

title Smart Home diagramma delle classi di analisi

class Utente {
    idUtente: String
}

class Timer {
    orarioAttuale: DateTime
}

class Zona {
    id: String
}

class Scenario {
    id: String
}

class Dispositivo {
    id: String
}

Form "1" -- "1" Timer : consulta
Form "1" -- "0..*" Zona : coordina
Form "1" -- "0..*" Scenario : esegue

Zona "1" -- "0..*" Dispositivo : contiene
Scenario "0..*" -- "0..*" Dispositivo : coinvolge

@enduml